@@ -1,120 +1,102 @@
 package com.unbidden.telegramcoursesbot.service.content.handler;
 
 import com.unbidden.telegramcoursesbot.bot.ClientManager;
-import com.unbidden.telegramcoursesbot.model.Bot;
-import com.unbidden.telegramcoursesbot.model.UserEntity;
-import com.unbidden.telegramcoursesbot.model.content.Content;
-import com.unbidden.telegramcoursesbot.model.content.ContentTextData;
+import com.unbidden.telegramcoursesbot.dto.internal.SendMessageResultDto;
+import com.unbidden.telegramcoursesbot.exception.TelegramException;
+import com.unbidden.telegramcoursesbot.localization.LocalizationLoader;
+import com.unbidden.telegramcoursesbot.localization.Localizations;
+import com.unbidden.telegramcoursesbot.model.BotRole;
 import com.unbidden.telegramcoursesbot.model.content.LocalizedContent;
 import com.unbidden.telegramcoursesbot.model.content.MarkerArea;
 import com.unbidden.telegramcoursesbot.model.content.Content.MediaType;
 import com.unbidden.telegramcoursesbot.repository.LocalizedContentRepository;
 import com.unbidden.telegramcoursesbot.repository.MarkerAreaRepository;
-import com.unbidden.telegramcoursesbot.service.localization.Localization;
-import com.unbidden.telegramcoursesbot.service.localization.LocalizationLoader;
-import com.unbidden.telegramcoursesbot.service.user.UserService;
+
+import jakarta.transaction.Transactional;
+
 import java.util.List;
-import java.util.Optional;
-import lombok.RequiredArgsConstructor;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.springframework.lang.NonNull;
+import java.util.concurrent.CompletableFuture;
+
 import org.springframework.stereotype.Component;
+import org.springframework.util.Assert;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
+import org.telegram.telegrambots.meta.api.objects.MessageEntity;
 import org.telegram.telegrambots.meta.api.objects.message.Message;
+import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 
 @Component
-@RequiredArgsConstructor
-public class TextContentHandler implements LocalizedContentHandler<LocalizedContent> {
-    private static final Logger LOGGER = LogManager.getLogger(TextContentHandler.class);
-
-    private final LocalizedContentRepository localizedContentRepository;
-
+public class TextContentHandler extends AbstractContentHandler<LocalizedContent> {
+    private final LocalizedContentRepository contentRepository;
+    
     private final MarkerAreaRepository markerAreaRepository;
-
-    private final LocalizationLoader localizationLoader;
-
-    private final UserService userService;
 
     private final ClientManager clientManager;
 
+    public TextContentHandler(LocalizedContentRepository contentRepository,
+            MarkerAreaRepository markerAreaRepository,
+            ClientManager clientManager,
+            LocalizationLoader localizationLoader) {
+        super(localizationLoader);
+        this.contentRepository = contentRepository;
+        this.markerAreaRepository = markerAreaRepository;
+        this.clientManager = clientManager;
+    }
+
     @Override
-    public LocalizedContent parseLocalized(@NonNull List<Message> messages, @NonNull Bot bot,
-            boolean isLocalized) {
-        final LocalizedContent localizedContent = new LocalizedContent();
-        final Message message = messages.get(0);
+    @Transactional
+    public LocalizedContent parseAndPersist(BotRole botRole, List<Message> messages, String languageCode, boolean isProtected) {
+        Assert.notNull(botRole, "botRole cannot be null");
+        Assert.notEmpty(messages, "messages cannot be empty or null");
+        Assert.notNull(languageCode, "languageCode cannot be null");
+
+        final LocalizedContent content = new LocalizedContent();
+        final Message message = messages.getFirst();
         final List<MarkerArea> markers = (message.getEntities() != null) ? message.getEntities()
-                .stream().map(e -> markerAreaRepository.save(new MarkerArea(e)))
+                .stream().map(e -> new MarkerArea(e, content))
                 .toList() : List.of();
-
-        localizedContent.setBot(bot);
-        localizedContent.setData(new ContentTextData(message.getText(),
-                markers, isLocalized));
-        localizedContent.setLanguageCode(userService.getUser(message
-                .getFrom().getId(), userService.getDiretor()).getLanguageCode());
-        return localizedContent;
-    }
-
-    @Override
-    public LocalizedContent parseLocalized(@NonNull List<Message> messages, @NonNull Bot bot,
-            @NonNull String localizationName, @NonNull String languageCode) {
-        final LocalizedContent localizedContent = new LocalizedContent();
         
-        localizedContent.setBot(bot);
-        localizedContent.setData(new ContentTextData(localizationName, List.of(), true));
-        localizedContent.setLanguageCode(languageCode);
-        return localizedContent;
+        content.setBot(botRole.getBot());
+        content.setData(message.getText());
+        content.setLanguageCode(languageCode);
+        content.setType(getContentType());
+        content.setProtected(isProtected);
+        contentRepository.save(content);
+        markerAreaRepository.saveAll(markers);
+        return content;
     }
 
     @Override
-    @NonNull
-    public List<Message> sendContent(@NonNull Content content, @NonNull UserEntity user,
-            @NonNull Bot bot) {
-        return sendContent(content, user, bot, false, false);
+    public List<CompletableFuture<List<SendMessageResultDto>>> sendContentInBulkAsync(List<BotRole> targetRoles, LocalizedContent content) {
+        Assert.notEmpty(targetRoles, "targetRoles cannot be empty or null");
+        Assert.noNullElements(targetRoles, "targetRoles cannot contain null");
+        Assert.notNull(content, "content cannot be null");
+
+        final List<MessageEntity> entities = markerAreaRepository.findByContentId(content.getId()).stream()
+                .map(MarkerArea::toMessageEntity).toList();
+
+        return targetRoles.stream().map(br -> {
+            try {
+                return clientManager.getClient(br.getBot()).executeAsync(SendMessage.builder()
+                    .chatId(br.getUser().getId())
+                    .text(content.getData())
+                    .entities(entities)
+                    .protectContent(content.isProtected())
+                    .build()).handle((m, t) -> {
+                        if (t != null) {
+                            return List.of(new SendMessageResultDto(new TelegramException("Failed to send a text content.",
+                                    localizationLoader.localize(Localizations.Error.SEND_CONTENT, br), t)));
+                        } else {
+                            return List.of(new SendMessageResultDto(m));
+                        }
+                    });
+            } catch (TelegramApiException e) {
+                return CompletableFuture.completedFuture(List.of(new SendMessageResultDto(new TelegramException("Failed to send a text content.",
+                        localizationLoader.localize(Localizations.Error.SEND_CONTENT, br), e))));
+            }
+        }).toList();
     }
 
     @Override
-    @NonNull
-    public List<Message> sendContent(@NonNull Content content, @NonNull UserEntity user,
-            @NonNull Bot bot, boolean isProtected, boolean skipText) {
-        if (skipText) {
-            LOGGER.warn("Content " + content.getId() + " is of type " + content.getType()
-                    + " but parameter to skip text is enabled, meaning no content will be sent.");
-            return List.of();
-        }
-        final LocalizedContent localizedContent = (LocalizedContent)content;
-        final Localization localization = (localizedContent.getData().isLocalization())
-                ? localizationLoader.getLocalizationForUser(localizedContent
-                    .getData().getData(), user)
-                : new Localization(localizedContent.getData().getData());
-        
-        if (localization.getEntities() == null || localization.getEntities().isEmpty()) {
-            localization.setEntities(localizedContent.getData().getEntities().stream()
-                    .map(m -> m.toMessageEntity()).toList());
-        }
-        return List.of(clientManager.getClient(bot).sendMessage(SendMessage.builder()
-                .chatId(user.getId())
-                .text(localization.getData())
-                .entities(localization.getEntities())
-                .protectContent(isProtected)
-                .build()));
-    }
-
-    @Override
-    @NonNull
-    public Optional<LocalizedContent> findById(@NonNull Long id) {
-        return localizedContentRepository.findById(id);
-    }
-
-    @Override
-    @NonNull
-    public LocalizedContent persist(@NonNull Content content) {
-        final LocalizedContent localizedContent = (LocalizedContent)content;
-        return localizedContentRepository.save(localizedContent);
-    }
-
-    @Override
-    @NonNull
     public MediaType getContentType() {
         return MediaType.TEXT;
     }
